--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
+    "moment": "^2.30.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
