--- a/web-chart/templates/deployment.yaml
+++ b/web-chart/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
               protocol: TCP
           env:
             - name: VUE_APP_API_URL
-              value: "http://vdt-2024-api-chart:8000"
+              value: "http://192.168.0.106:30001"
 
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
