--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: descent1511/frontend:latest
     container_name: vue-app
+    environment :
+        VUE_APP_API_URL: http://192.168.0.102:8000
+
     ports:
       - "8080:80"
 
