--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@hapi/topo": "^6.0.2",
+    "@ordent/vue-web-vitals": "^1.0.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "core-js": "^3.8.3",
     "moment": "^2.30.1",
+    "pinia": "^2.1.7",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-web-vitals": "^0.1.3",
+    "web-vitals": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -25,7 +29,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "postcss": "^8.4.38"
+    "postcss": "^8.4.38",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5"
   },
   "eslintConfig": {
     "root": true,
