--- a/web-chart/templates/servicemonitor.yaml
+++ b/web-chart/templates/servicemonitor.yaml
@@ -15,10 +15,7 @@ spec:
   endpoints:
     - interval: {{ .Values.serviceMonitor.interval }}
       scrapeTimeout: {{ .Values.serviceMonitor.scrapeTimeout }}
-      path: /metrics/frontend
       static_configs:
         - targets:
-          - "192.168.0.106:30001"
+          - "192.168.0.106:30001/metrics/frontend"
 {{- end }}
-
-
